# SetOperations

./: README.md  SetOperations.cabal
src/Graphics/: Determinant.hs  Math.hs  Polyhedra.hs  SetOperations.hs
tests/: MainTestSuite.hs
tests/Graphics/: PolyhedraTests.hs  SetOperationsTests.hs  TriangulationTests.hs
